--- a/iletisim.html
+++ b/iletisim.html
@@ -71,22 +71,22 @@
           <div class="card" style="margin-left: 160px; margin-top: 60px;">
             <img src="icon_tel.png" width="150px" height="150px">
             <div class="container">
-              <h>Telefon Numaram:</h> 
-              <p>(90)057 188 7997</p> 
+              <h style="color: rgb(225, 225, 225);">Telefon Numaram:</h> 
+              <p style="color: rgb(225, 225, 225);">(90)057 188 7997</p> 
             </div>
           </div>
           <div class="card" style="margin-left: 160px;">
             <img src="icon_email.png" width="150px" height="150px">
             <div class="container">
-              <h>E-mail Adresim::</h> 
-              <p>enesahmet9_@hotmail.com</p> 
+              <h style="color: rgb(225, 225, 225);">E-mail Adresim::</h> 
+              <p style="color: rgb(225, 225, 225);">enesahmet9_@hotmail.com</p> 
             </div>
           </div>
           <div class="card" style="margin-left: 160px;">
             <img src="icon_github.png" width="150px" height="150px">
             <div class="container">
-              <h>Github Hesabım:</h> 
-              <p>EnesAhmetGul</p> 
+              <h style="color: rgb(225, 225, 225);">Github Hesabım:</h> 
+              <p style="color: rgb(225, 225, 225);">EnesAhmetGul</p> 
             </div>
           </div>
         </th>
