--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="sidenav">
   <img src="Logom.png" width="150px" height="150px">
   <a href="index.html">Anasayfa</a>
-  <a href="#">Hakkımda</a>
+  <a href="hakkımda.html">Hakkımda</a>
   <a href="#">Becerilerim</a>
   <a href="iletisim.html">İletişim</a>
 </div>
