--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="main" style="margin-bottom: 50px;">
                 <img style="margin-left: 20px;" src="Adam.png">
                 <div class="links">
-                  <a href="#">Daha Fazlasını Öğren</a>
+                  <a href="hakkımda.html">Daha Fazlasını Öğren</a>
                   <a href="iletisim.html">Benimle İletişime Geç</a>
                 </div>
            </div>
